--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   build:
-
+    
     runs-on: ubuntu-latest
 
     steps:
@@ -14,5 +14,5 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
-    - name: List S3 Buckets
+    - name: List S3 Buckets test
       run: aws s3api list-buckets
